--- a/main.html
+++ b/main.html
@@ -11,16 +11,16 @@
 	<h1>Feedback Form</h1>
 	<form method="post">
 			<label for="name">name</label>
-			<input type="text" id="name" maxlength="50" minlength="3" />
+			<input type="text" id="name" maxlength="50" minlength="3" >
 		<br></br>
 			<label for="portfolio">portfolio</label>
-			<input type="url" id="portfolio" />
+			<input type="url" id="portfolio" >
 		<br></br>
 			<label for="favColor">FavColors</label>
-				<input type="color" id="favColor" />
+				<input type="color" id="favColor" >
 		<br></br>
 			<label for="likeness">Percentage Of Likeness</label>
-			<input type="range" main="1" max="100" id="likeness" />
+			<input type="range" main="1" max="100" id="likeness" >
 		<br></br>
 		<button type="submit">Submit</button>
 		<button type="reset">Reset</button>
