--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 	<!-- the entire body must be written by student -->
 	<h1>Feedback Form</h1>
 	<form method="post">
-			<label for="name">name</label>
+			<label for="name">Name</label>
 			<input type="text" id="name" maxlength="50" minlength="3" >
 		<br></br>
-			<label for="portfolio">portfolio</label>
+			<label for="portfolio">Portfolio</label>
 			<input type="url" id="portfolio" >
 		<br></br>
 			<label for="favColor">FavColors</label>
@@ -23,7 +23,6 @@
 			<input type="range" main="1" max="100" id="likeness" >
 		<br></br>
 		<button type="submit">Submit</button>
-		<button type="reset">Reset</button>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
