--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 				<input type="color" id="favColor" >
 		<br></br>
 			<label for="likeness">Percentage Of Likeness</label>
-			<input type="range" main="1" max="100" id="likeness" >
+			<input type="range" min="1" max="100" id="likeness" >
 		<br></br>
 		<button type="submit">Submit</button>
 	</form>
